add sectet key and update swagger doc
