# config/api.php
@@ -1,0 +1,5 @@
+<?php
+
+return [
+    'secret_key' => env('API_SECRET_KEY')
+];
